[tool.poetry]
name = "another"
version = "0.2.1"
description = ""
authors = ["Vahid Al <thevahidal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
granian = "^0.2.1"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
